# todo-api-rust

./: .env  Cargo.toml  README.md  postgres.yaml
migrations/2023-09-17-185712_create_todo_table/: up.sql
src/: main.rs
src/api/: api.rs
src/repository/: database.rs  schema.rs
